fix - collapsing event preview on focus out and tabbing outline

--- a/capstone/static/css/scss/labs-chronolawgic.scss
+++ b/capstone/static/css/scss/labs-chronolawgic.scss
@@ -205,7 +205,7 @@ main#main-app {
 
     .case-button {
       padding: 0;
-      margin: 0;
+      margin: 0.5rem;
       background-color: white;
       border: 0;
     }
@@ -222,7 +222,6 @@ main#main-app {
       width: 20rem;
       height: 130px;
       padding: 0.5rem 0.75rem;
-      margin: 0.5rem;
       align-self: end;
 
       &:hover, &:focus, &:active {
